-PIZZ- Add Order page pics & fix global max width -- Images: Add photos for Order page -- CSS: Fix alignment of text in Order page cards -- CSS: Fix max width to prevent containers stretching too wide on large screens

--- a/_Projects/-PIZZ-/css/styles.css
+++ b/_Projects/-PIZZ-/css/styles.css
@@ -311,7 +311,7 @@ main.menu {
 @media screen and (max-width: 540px) {
   .gallery {
     grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 5px;
+    gap: 20px;
   }
 
   .gallery div {
@@ -389,7 +389,7 @@ button[type="submit"]:hover {
   background-color: #0056b3;
 }
 
-.order {
+main {
   width: 90%;
   max-width: 1000px;
   margin: 0 auto 0 auto;
@@ -410,15 +410,15 @@ button[type="submit"]:hover {
 
 .order-item {
   background-color: #ffffff;
-  border: 1px solid #ddd;
+  border: 1px solid #8b8b8b;
   border-radius: 5px;
   overflow: hidden;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   text-align: center;
-  height: 300px;
   width: 250px;
 }
 
@@ -426,6 +426,7 @@ button[type="submit"]:hover {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  border-bottom: #333 solid 1px;
 }
 
 .item-name {
